hphp/hack/test/typecheck/classname/new_generic.php.like_types.exp
File "new_generic.php", line 13, characters 3-16:
  <expr#1> as Tobj
File "new_generic.php", line 18, characters 3-32:
  ~C<int>
File "new_generic.php", line 19, characters 3-38:
  ~C<int>
File "new_generic.php", line 19, characters 29-36:
Invalid argument (Typing[4110])
File "new_generic.php", line 10, characters 3-6:
Expected ~[unresolved] because it is an unenforceable type
File "new_generic.php", line 19, characters 29-36:
But got string
